<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost">Cost of Service</string>
    <string name="question">How was the service ?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="ok">OK (15%)</string>
    <string name="switchs">Round up tip</string>
    <string name="calculate">CALCULATE</string>
    <string name="amount">Tip Amount: %s</string>
    <string name="please_enter_value">Please enter some value on input text</string>
    <string name="zero_value">impossible to do operation with zero value</string>

</resources>